--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,50 @@
 {
-  "compilerOptions": {
-    "outDir": "lib/esm",
-    "module": "esnext",
-    "target": "es5",
-    "lib": ["es6", "dom", "es2016", "es2017"],
-    "jsx": "react",
-    "declaration": true,
-    "moduleResolution": "node",
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "esModuleInterop": true,
-    "noImplicitReturns": true,
-    "noImplicitThis": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "suppressImplicitAnyIndexErrors": true,
-    "allowSyntheticDefaultImports": true
-  },
+  "compileOnSave": false,
   "include": [
     "src"
   ],
+  "compilerOptions": {
+    "jsx": "react",
+    "rootDir": ".",
+    "sourceMap": true,
+    "declaration": false,
+    "moduleResolution": "node",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "importHelpers": true,
+    "target": "es2015",
+    "module": "esnext",
+    "lib": [
+      "es2017",
+      "dom"
+    ],
+    "skipLibCheck": true,
+    "skipDefaultLibCheck": true,
+    "baseUrl": ".",
+    "strictPropertyInitialization": false,
+    "paths": {
+      "@near-wallet-selector/core": [
+        "dist/packages/core"
+      ],
+      "@near-wallet-selector/ledger": [
+        "packages/ledger/src/index.ts"
+      ],
+      "@near-wallet-selector/math-wallet": [
+        "packages/math-wallet/src/index.ts"
+      ],
+      "@near-wallet-selector/near-wallet": [
+        "packages/near-wallet/src/index.ts"
+      ],
+      "@near-wallet-selector/sender": [
+        "packages/sender/src/index.ts"
+      ],
+      "@near-wallet-selector/wallet-connect": [
+        "packages/wallet-connect/src/index.ts"
+      ]
+    }
+  },
   "exclude": [
     "node_modules",
-    "lib"
+    "dist"
   ]
 }
