--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "jest": "^26.6.3",
     "jest-environment-node": "^26.6.2",
     "near-cli": "^3.0.0",
-    "near-sdk-as": "3.2.3",
     "nodemon": "^2.0.7",
     "parcel-bundler": "^1.12.5",
     "react-test-renderer": "^17.0.2",
@@ -28,12 +27,14 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
+    "@near-wallet-selector/core": "^3.0.2",
+    "@near-wallet-selector/ledger": "^3.0.2",
+    "@near-wallet-selector/math-wallet": "^3.0.2",
     "@near-wallet-selector/near-wallet": "^3.0.2",
     "@near-wallet-selector/sender": "^3.0.2",
     "big.js": "^6.1.1",
     "env-cmd": "^10.1.0",
     "near-api-js": "0.44.2",
-    "near-wallet-selector": "*",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
